--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>The Profile of Jonathan Bennett's</title>
+		
+		<link rel="author" href="humans.txt" />
 	</head>
 
 	<body>
