--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>The Profile of Jonathan Bennett's</title>
-		
-		<link rel="author" href="humans.txt" />
-	</head>
+---
+layout: default
+title: Jonathan Bennett
+---
 
-	<body>
-		<h1>Jonathan Bennett</h1>
-	
-	</body>
-</html>
+Welcome!
