--- a/index.html
+++ b/index.html
@@ -4,3 +4,11 @@ title: Jonathan Bennett
 ---
 
 Welcome!
+
+{% for posts in site.posts limit:5 %}
+	<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+	{{ post.content }}
+	<em>Posted on {{ post.date | date_to_long_string }}.</em>
+{% endfor %}
+
+	
