--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Welcome!
 {% for posts in site.posts limit:5 %}
 	<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 	{{ post.content }}
-	<em>Posted on {{ post.date | %A, %B %d, %Y }}.</em>
+	<em>Posted on {{ post.date }}.</em>
 {% endfor %}
 
 	
