--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@ title: Jonathan Bennett
 
 Welcome!
 
-{% for posts in site.posts limit:5 %}
+{% for post in site.posts limit:5 %}
 	<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 	{{ post.content }}
-	<em>Posted on {{ post.date }}.</em>
+	<em>Posted on {{ post.date | date_to_long_string }}.</em>
 {% endfor %}
-
 	
