--- a/posts.html
+++ b/posts.html
@@ -3,17 +3,10 @@ title: Posts
 layout: default
 ---
 
-{% for post in site.posts limit:10 %}
-	<li>
-		<a href="{{ post.url }}">{{ post.title }}</a> -
-		{{ post.date | date_to_long_string }}
-	</li>
-{% endfor %}
-
-
-{% for post in paginator.posts }
+{% for post in paginator.posts %}
 	{% include post.html %}
 {% endfor %}
+
 
 {% if paginator.total_pages > 1 %}
 <nav id="pagination">
