--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@ title: Jonathan Bennett
 
 Welcome!
 
-Per: {{ paginator.per_page }}
-Total: {{ paginator.total_pages }}
+{% for post in paginator.posts %}
+	{% include post.html %}
+{% endfor %}
+
+<!-- Pagination links -->
+<nav class="pagination">
+	{% if paginator.previous_page %}
+		<li><a href="/page{{paginator.previous_page}}" class="previous">Previous</a></li>
+	{% else %}
+		<li><span class="previous">Previous</span></li>
+	{% endif %}
+
+	<li><span class="page_number ">
+		Page: {{paginator.page}} of {{paginator.total_pages}}
+	</span></li>
+
+	{% if paginator.next_page %}
+		<li><a href="/page{{paginator.next_page}}" class="next ">Next</a></li>
+	{% else %}
+		<li><span class="next ">Next</span></li>
+	{% endif %}
+</div>
 	
